# niloc

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_WORKFLOW.md  FEATURE_DUE_DATE_CALENDAR.md  FRONTEND_CHANGES.md  HIMU-2026-03-25_17-55-25.csv  LICENSE.txt  LOCATION_TROUBLESHOOTING.md  Makefile  PARCEL_GEOCODING_PLAN.txt  PROJECT_MANAGEMENT.md  REACT_MIGRATION_ISSUE.md  README.md  README.txt  README_SCRIPTS.md  REFACTORING_PLAN.md  SETUP_MAC.md  TECHNICAL_EXPLANATION.md  UAT_Master_Plan.md  UAT_Test_Case_Templates.md  UI_MIGRATION_PLAN.txt  api_routes.py  app.py  auth_utils.py  checkpoints_A.txt  checkpoints_B.txt  checkpoints_C.txt  cleaned_job_numbers.txt  create_checkpoint_files.sh  data.xlsx  db_utils.py  debug-location.js  diagnose_decoder.sh  extract_tensorboard_assets.py  generate_masks.sh  job_numbers.txt  logfile  missing.py  (+28 more)
.github/workflows/: keep-alive.yml
admin/: routes.py
api/: __init__.py  fieldwork.py  geocoding.py  jobs.py  pois.py  routing.py  schedules.py  search.py  tags.py  users.py
avalon data/: HIMU-2026-03-31_16-31-49.csv  HIMU-2026-03-31_16-32-08.csv  HIMU-2026-03-31_16-34-34.csv
data/officeC/: test.txt  train.txt  val.txt
data/universityA/: a000_10.txt  a000_12.txt  a000_9.txt  a003_1.txt  a003_2.txt  a003_3.txt  a004_1.txt  a004_2.txt  a004_3.txt  a005_1.txt  a005_2.txt  a005_3.txt  a006_2.txt  a007_2.txt  a007_3.txt  a008_1.txt  a008_2.txt  a009_1.txt  a009_2.txt  a009_3.txt  a010_1.txt  a010_2.txt  a010_3.txt  a011_1.txt  a011_2.txt  a011_3.txt  a012_1.txt  a012_2.txt  a012_3.txt  a013_1.txt  a013_2.txt  a013_3.txt  a014_1.txt  a014_2.txt  a014_3.txt  a015_1.txt  a015_2.txt  a015_3.txt  a016_1.txt  a016_2.txt  (+113 more)
data/universityB/: test.txt  train.txt  val.txt
docs/: ana_retrain_steps.md  findings.md
migrations/: add_parcel_fields.py  add_search_indexes.py  fix_datetime_timezone.sql
migrations/versions/: 2025_01_16_remove_fieldwork_time_columns.py  2025_01_20_update_job_status_names.py  2025_08_31_align_tags_schema.py  2025_08_31_create_job_tags_table.py  2025_08_31_fix_tags_fieldwork_mixup.py  2025_09_11_allow_null_address_for_parcel_jobs.py  2025_11_18_add_user_username_index.py  2026_01_11_create_schedules_table.py  2026_01_17_add_parcel_geometry.py  2026_01_20_drop_schedules_notes_column.py  2026_01_25_add_postgis_geography_column.py  (+13 more)
models/: LICENSE.txt
niloc/: cmd_test_file.py  diagnose_decoder.py  evaluate.py  progress_callback.py  trainer.py
notebooks/: noise_characterization.ipynb
preprocess/: README.md  talk_plots.py
python_scripts/: check_static_version.py  clear_database.py  generate_pwa_icons.py  populate.py  pr_05_open_command.txt
recordings/: HIMU-2026-03-31_16-30-20.csv
scripts/: backfill_prop_appr_links.py  visualize_fabrication.py  visualize_findings.py
static/: manifest.json
templates/: admin_spa.html  agenda.html  base.html  login.html  map.html  map_simple.html
tests/: conftest.py  test_fabricate_cli.py  test_format_output.py  test_graph_path_generator.py  test_himu_to_ronin.py  test_inject_noise.py  test_niloc_infer_prep.py  test_ronin_to_niloc.py  test_search_api.py  test_smooth_junctions.py  test_validate_avalon_graph.py
(+179 files in other folders)
