[project]
name = "niloc"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "setuptools<72",
    "pytorch-lightning==1.9.5",
    "tensorboard",
    "matplotlib",
    "moviepy",
    "h5py",
    "omegaconf==2.1.1",
    "hydra-core==1.1.1",
    "numpy-quaternion>=2023.0.4",
    "torch>=2.8.0",
]

[project.optional-dependencies]
# Apple Silicon (MPS) — default for local dev on M-series Macs
mps = [
    "torch",
    "torchvision",
    "torchaudio",
]
# Linux + NVIDIA CUDA — Ana's machine.
# Install with: uv pip install -e ".[cuda]" --index-url https://download.pytorch.org/whl/cu118
cuda = [
    "torch",
    "torchvision",
    "torchaudio",
]
# Notebook, analysis, and development dependencies
dev = [
    "pandas",
    "statsmodels",
    "jupyter",
    "ipykernel",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["niloc*", "preprocess*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (type hints)
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PL",   # pylint
]
ignore = [
    "PLR0913", # too many arguments — numpy/scipy APIs need it
    "PLR2004", # magic value comparisons — fine in tests and numerics
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]   # no type annotations required in test functions

[tool.uv]
# On Apple Silicon the standard PyPI torch wheel includes MPS support.
# No extra index needed. On Linux+CUDA, override at install time:
#   uv pip install torch torchvision torchaudio \
#     --index-url https://download.pytorch.org/whl/cu118
